@@ -12,9 +12,9 @@
 #'
 #' @param loading.method Character (length = 1).
 #' Sets network loading calculation based on implementation
-#' described in \code{"BRM"} (Christensen & Golino, 2021) or
-#' an \code{"experimental"} implementation (Christensen et al., 2024).
-#' Defaults to \code{"experimental"}
+#' described in \code{"original"} (Christensen & Golino, 2021) or
+#' the \code{"revised"} (Christensen et al., 2024) implementation.
+#' Defaults to \code{"revised"}
 #'
 #' @param rotation Character.
 #' A rotation to use to obtain a simpler structure.
@@ -277,11 +277,11 @@
 #' @export
 #'
 # Hierarchical EGA ----
-# Updated 22.07.2024
+# Updated 12.08.2024
 hierEGA <- function(
     data,
     # `net.scores` arguments
-    loading.method = c("BRM", "experimental"),
+    loading.method = c("original", "revised"),
     rotation = NULL, scores = c("factor", "network"),
     loading.structure = c("simple", "full"),
     impute = c("mean", "median", "none"),
@@ -308,7 +308,8 @@ hierEGA <- function(
 
   # Check for missing arguments (argument, default, function)
   ## `net.scores`
-  loading.method <- set_default(loading.method, "experimental", net.loads)
+  # loading.method <- set_default(loading.method, "experimental", net.loads)
+  # Push default check to `net.laods`
   scores <- set_default(scores, "network", hierEGA)
   loading.structure <- set_default(loading.structure, "simple", hierEGA)
   impute <- set_default(impute, "none", net.scores)
